Crash on trying to rename 'Objects' category in Library Overrides display mode #110166

Closed
opened 2023-07-16 12:56:03 +02:00 by Albert-OShea · 1 comment

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 517.48

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-15 18:34, hash: a1a08610b60f
Worked: (newest version of Blender that worked as expected)

Short description of error
There is a specific item (or category? group? I'm not sure of the terminology) in the Library Overrides display mode of the outliner that when trying to rename it, will cause a crash. See the reproduction steps for more specifics.

Screenshot.jpg

You can see it here on the left side, underlined in red. On the right is the filter you need to enable in order to see it.

Exact steps for others to reproduce the error

  • Download both attached blend files and open linking.blend
  • The outliner is set to Library Overrides display mode, and the Library Overrides view mode is set to Properties. Additionally, the filter has System Overrides enabled (see screenshot)
  • Double click on the 'Objects' foldout category as if trying to rename it.
  • Blender crashes.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 517.48 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-15 18:34, hash: `a1a08610b60f` Worked: (newest version of Blender that worked as expected) **Short description of error** There is a specific item (or category? group? I'm not sure of the terminology) in the Library Overrides display mode of the outliner that when trying to rename it, will cause a crash. See the reproduction steps for more specifics. ![Screenshot.jpg](/attachments/5bb18c7e-4a0c-4422-befa-304d46bf5dad) You can see it here on the left side, underlined in red. On the right is the filter you need to enable in order to see it. **Exact steps for others to reproduce the error** - Download both attached blend files and open linking.blend - The outliner is set to Library Overrides display mode, and the Library Overrides view mode is set to Properties. Additionally, the filter has System Overrides enabled (see screenshot) - Double click on the 'Objects' foldout category as if trying to rename it. - Blender crashes.
Albert-OShea added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-16 12:56:04 +02:00
Member

Can confirm the crash. Seems to be only happening for the foldable entry of Collection > Objects, double clicking other stuff does not crash.

Can confirm the crash. Seems to be only happening for the foldable entry of `Collection > Objects`, double clicking other stuff does not crash.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-17 04:47:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110166
No description provided.