Fix #110166: Prevent ourliner editing generic labels.

When trying to rename a generic label in the outliner, like the "Object"
category name inside library override properties view, `do_item_rename`
will crash because it failed to gurad type `TSE_GENERIC_LABEL`.
Now fixed.

Pull Request: https://projects.blender.org/blender/blender/pulls/110188